--- a/tp-admin-master/app/www/view/usercenter/setbankcard.html
+++ b/tp-admin-master/app/www/view/usercenter/setbankcard.html
@@ -24,8 +24,7 @@
 <script type="text/javascript" src="jquery.cityselect.js"></script>
 {css href="__CSS__/login.css" /}
 {js href="__JS__/resize.js" /}
-{js href="__JS__/jquery2.js" /}
-<script src='jquery.cityselect.js'></script>
+{js href="__JS__/jquery.js" /}
 {js href="__JS__/bankcard.js" /}
 <script>
 $(function(){
@@ -70,7 +69,7 @@ $(function(){
           <td data-v-37e217f7="">开户省</td>
           <td data-v-37e217f7="">
           <select data-v-37e217f7="" class="prov va271" name="Address_P" id="Address_P" tag="开户省">
-              <option data-v-37e217f7="" value="0">北京</option>
+          <option data-v-37e217f7="" value="0">北京</option>
               <option data-v-37e217f7="" value="1">东京</option>
               </select> 
             <i data-v-37e217f7="" class="iconfont unfold"></i></td>
@@ -80,7 +79,8 @@ $(function(){
           <td data-v-37e217f7=""> 
               <select data-v-37e217f7="" class="city va271" disabled="disabled" name="Address_C" id="Address_C">
                   <option data-v-37e217f7="" value="0">北京</option>
-                  <option data-v-37e217f7="" value="1">东京</option>              
+              <option data-v-37e217f7="" value="1">东京</option>
+              
               </select>
             <i data-v-37e217f7="" class="iconfont unfold"></i></td>
         </tr>
