--- a/tp-admin-master/app/www/view/usercenter/rechargeway.html
+++ b/tp-admin-master/app/www/view/usercenter/rechargeway.html
@@ -40,19 +40,19 @@
     </a></nav>
   <div data-v-4eaf67f1="" class="main" s="[object Object]">
     <div data-v-4eaf67f1="" class="innerWrap">
-      <div data-v-4eaf67f1="" class="surperise active"><a href="/normalPay?method=Bank" class="wrap" data-v-4eaf67f1=""><img data-v-4eaf67f1="" src="http://imagess-google.com/../system/common/bank/pay/card.png" class="img">
+      <div data-v-4eaf67f1="" class="surperise active"><a href="{:url('www/usercenter/bank')}" class="wrap" data-v-4eaf67f1=""><img data-v-4eaf67f1="" src="http://imagess-google.com/../system/common/bank/pay/card.png" class="img">
         <div data-v-4eaf67f1="" class="text"><strong data-v-4eaf67f1="">银行转账</strong>
           <p data-v-4eaf67f1=""> 单笔最低<ins data-v-4eaf67f1="">10</ins>元，
             最高<ins data-v-4eaf67f1="">5000000</ins>元。 </p>
         </div>
         <i data-v-4eaf67f1="" class="iconfont right fr"></i></a></div>
-      <div data-v-4eaf67f1="" class="surperise active"><a data-v-4eaf67f1="" class="wrap"><img data-v-4eaf67f1="" src="http://imagess-google.com/../system/common/bank/pay/weixin.png" class="img">
+      <div data-v-4eaf67f1="" class="surperise active"><a href="{:url('www/usercenter/wechat')}" data-v-4eaf67f1="" class="wrap"><img data-v-4eaf67f1="" src="http://imagess-google.com/../system/common/bank/pay/weixin.png" class="img">
         <div data-v-4eaf67f1="" class="text"><strong data-v-4eaf67f1="">微信支付</strong>
           <p data-v-4eaf67f1=""> 单笔最低<ins data-v-4eaf67f1="">1</ins>元，
             最高<ins data-v-4eaf67f1="">500000</ins>元。 </p>
         </div>
         <i data-v-4eaf67f1="" class="iconfont right fr"></i></a></div>
-      <div data-v-4eaf67f1="" class="surperise active"><a data-v-4eaf67f1="" class="wrap"><img data-v-4eaf67f1="" src="http://imagess-google.com/../system/common/bank/pay/alipay.png" class="img">
+      <div data-v-4eaf67f1="" class="surperise active"><a href="{:url('www/usercenter/alipay')}" data-v-4eaf67f1="" class="wrap"><img data-v-4eaf67f1="" src="http://imagess-google.com/../system/common/bank/pay/alipay.png" class="img">
         <div data-v-4eaf67f1="" class="text"><strong data-v-4eaf67f1="">支付宝支付</strong>
           <p data-v-4eaf67f1=""> 单笔最低<ins data-v-4eaf67f1="">1</ins>元，
             最高<ins data-v-4eaf67f1="">500000</ins>元。 </p>
