--- a/tp-admin-master/app/www/view/login/index.html
+++ b/tp-admin-master/app/www/view/login/index.html
@@ -32,7 +32,7 @@
   <header class="top">
     <span>用户登录</span> <!---->
     <div class="iconfont back" style="display: none;"></div>
-    <a href="{:url('www/login/index')}" class="iconfont back"></a> 
+    <a href="javascript :;" onClick="javascript :history.back(-1)" class="iconfont back"></a> 
   </header> 
   <div data-v-3060be5c="" class="main" s="[object Object]">
     <div data-v-3060be5c="" class="header">
