--- a/tp-admin-master/app/www/view/newwinners/competition.html
+++ b/tp-admin-master/app/www/view/newwinners/competition.html
@@ -28,7 +28,7 @@
   <div id="shadow" style="display: none;"></div>
   <header class="top"> <span></span>
     <ul>
-      <li class=""><a href="newWinners.html">中奖信息</a></li>
+      <li class=""><a href="{:url('www/newwinners/index')}">中奖信息</a></li>
       <li class="on"><a>昨日奖金榜</a></li>
     </ul>
     <div class="iconfont back" style="display: none;"></div>
