--- a/tp-admin-master/app/www/view/usercenter/index.html
+++ b/tp-admin-master/app/www/view/usercenter/index.html
@@ -38,7 +38,7 @@
   <div data-v-4b98a1e7="" class="main userCenter" s="[object Object]">
     <div data-v-4b98a1e7="" class="topInfo"><a href="{:url('www/usercenter/personalinfo')}" class="" data-v-4b98a1e7=""><img data-v-4b98a1e7="" src="http://imagess-google.com/system/common/headimg/EED50A5799E76E58.jpg"></a>
       <p data-v-4b98a1e7="">账&nbsp;号：<ins data-v-4b98a1e7="" id="UserName">kris123</ins></p>
-      <span data-v-4b98a1e7="">余&nbsp;额：<i data-v-4b98a1e7="">已隐藏 <ins data-v-4b98a1e7="" style="color: rgb(220, 59, 64);">显示</ins></i></span>
+      <span data-v-4b98a1e7="">余&nbsp;额：<i data-v-4b98a1e7="">0元</i></span>
       <div data-v-4b98a1e7="" class="refresh" style="display: none;"><i data-v-4b98a1e7="" class="iconfont"></i></div>
     </div>
     <div data-v-4b98a1e7="" class="topMoney">
@@ -51,15 +51,12 @@
     <div data-v-4b98a1e7="" class="options">
       <a href="{:url('www/usercenter/personalinfo')}" class="active" data-v-4b98a1e7=""><i data-v-4b98a1e7="" class="iconfont o1"></i> <span data-v-4b98a1e7="">个人信息</span> <i data-v-4b98a1e7="" class="iconfont right fr"></i></a>
       <p data-v-4b98a1e7="" class="hr1px"></p>
-      <!-- <a href="/securityCenter" class="active" data-v-4b98a1e7=""><i data-v-4b98a1e7="" class="iconfont o2"></i> <span data-v-4b98a1e7="">安全中心</span> <i data-v-4b98a1e7="" class="iconfont right fr"></i></a>
-      <p data-v-4b98a1e7="" class="hr1px"></p>
-      <a href="/agentCenter" class="active" data-v-4b98a1e7=""><i data-v-4b98a1e7="" class="iconfont o4"></i> <span data-v-4b98a1e7="">代理中心</span> <i data-v-4b98a1e7="" class="iconfont right fr"></i></a>
-      <p data-v-4b98a1e7="" class="hr1px"></p> -->
       <a href="{:url('www/usercenter/plstatement')}" class="active" data-v-4b98a1e7=""><i data-v-4b98a1e7="" class="iconfont o3"></i> <span data-v-4b98a1e7="">今日盈亏</span> <i data-v-4b98a1e7="" class="iconfont right fr"></i></a>
       <p data-v-4b98a1e7="" class="hr1px"></p>
       <a href="{:url('www/usercenter/notice')}" class="active" data-v-4b98a1e7=""><i data-v-4b98a1e7="" class="iconfont o4"></i> <span data-v-4b98a1e7="">我的消息</span> <i data-v-4b98a1e7="" class="iconfont right fr"></i></a>
       <p data-v-4b98a1e7="" class="hr1px"></p>
       <a href="{:url('www/usercenter/contact')}" class="active" data-v-4b98a1e7=""><i data-v-4b98a1e7="" class="iconfont o4"></i> <span data-v-4b98a1e7="">联系我们</span> <i data-v-4b98a1e7="" class="iconfont right fr"></i></a>
+      <p data-v-4b98a1e7="" class="hr1px"></p>
       <a href="{:url('www/login/out')}" class="active" data-v-4b98a1e7=""><i data-v-4b98a1e7="" class="iconfont o4"></i> <span data-v-4b98a1e7="">退出登录</span> <i data-v-4b98a1e7="" class="iconfont right fr"></i></a>  
     </div>
   </div>
