--- a/tp-admin-master/public/static/www/css/login.css
+++ b/tp-admin-master/public/static/www/css/login.css
@@ -1225,8 +1225,8 @@ table[data-v-4d86226c] {
 }
 table tr[data-v-4d86226c] {
 	height: 2.5em;
-	font-size: .8em;
-	line-height: 2.5em
+	font-size: 1.1em;
+	line-height: 2.7em
 }
 table input[data-v-4d86226c] {
 	width: 98%;
@@ -1276,7 +1276,7 @@ table td[data-v-4d86226c]:last-of-type {
 }
 table .yzm[data-v-4d86226c] {
 	float: right;
-	width: 4em;
+	width: 6em;
 	height: 2.5em
 }
 table #more[data-v-4d86226c] {
@@ -19796,8 +19796,8 @@ table[data-v-f9a5290e] {
 	background-color: #fff
 }
 table tr[data-v-f9a5290e] {
-	height: 2.5em;
-	font-size: .8em;
+	height: 2.7em;
+	font-size: 1.1em;
 	line-height: 2.5em
 }
 table input[data-v-f9a5290e] {
@@ -19869,8 +19869,8 @@ table td .tableBTN .sendCode.unClick[data-v-f9a5290e] {
 }
 table td .tableBTN .yzm[data-v-f9a5290e] {
 	display: block;
-	width: 5em;
-	height: 2.5em
+	width: 6em;
+	height: 2.7em
 }
 table td select[data-v-f9a5290e] {
 	top: 0;
@@ -30237,8 +30237,8 @@ table[data-v-3060be5c] {
 }
 table tr[data-v-3060be5c] {
 	height: 2.5em;
-	font-size: .8em;
-	line-height: 2.5em
+	font-size: 1.1em;
+	line-height: 2.7em
 }
 table input[data-v-3060be5c] {
 	width: 98%;
