--- a/tp-admin-master/app/www/view/login/register.html
+++ b/tp-admin-master/app/www/view/login/register.html
@@ -22,6 +22,7 @@
 <link rel="shortcut icon" href=favicon.ico type=image/x-icon>
 {css href="__CSS__/login.css" /}
 {js href="__JS__/jquery.js" /}
+{js href="__JS__/resize.js" /}
 {js href="__JS__/register.js" /}
 
 </head>
@@ -46,8 +47,7 @@
         </tr>
         <tr data-v-4d86226c="">
           <td data-v-4d86226c="">设置密码</td>
-          <td data-v-4d86226c="" colspan="2" style="position: relative;"><input data-v-4d86226c="" type="url" maxlength="16" tag="设置密码" placeholder="请输入您要设置的密码" class="va43" name="Password" required style="position: relative; z-index: 1; background: rgba(0, 0, 0, 0);">
-            <span data-v-7b1322d1="" class="iconfont eye open" data-v-4d86226c=""></span> <em data-v-1355ab9a="" class="clearInput" data-v-4d86226c="" style="display: none;"></em></td>
+          <td data-v-4d86226c="" colspan="2" style="position: relative;"><input data-v-4d86226c="" type="url" maxlength="16" tag="设置密码" placeholder="请输入您要设置的密码" class="va43" name="Password" required style="position: relative; z-index: 1; background: rgba(0, 0, 0, 0);"></td>
         </tr>
         <tr data-v-4d86226c="">
           <td data-v-4d86226c="">验证码</td>
