--- a/tp-admin-master/app/www/view/login/forgetpwd.html
+++ b/tp-admin-master/app/www/view/login/forgetpwd.html
@@ -20,9 +20,10 @@
 <meta name=x5-page-mode content=app>
 <meta name=msapplication-tap-highlight content=no>
 <link rel="shortcut icon" href=favicon.ico type=image/x-icon>
+{js href="__JS__/jquery.js" /}
+{js href="__JS__/jquery.cookie.js" /}
 {css href="__CSS__/login.css" /}
 {js href="__JS__/resize.js" /}
-{js href="__JS__/jquery.js" /}
 </head>
 <body>
 <div id="app">
