--- a/tp-admin-master/app/www/view/login/register.html
+++ b/tp-admin-master/app/www/view/login/register.html
@@ -22,9 +22,9 @@
 <link rel="shortcut icon" href=favicon.ico type=image/x-icon>
 {css href="__CSS__/login.css" /}
 {js href="__JS__/jquery.js" /}
+{js href="__JS__/jquery.cookie.js" /}
 {js href="__JS__/resize.js" /}
 {js href="__JS__/register.js" /}
-
 </head>
 <body>
 <div id="app">
