--- a/tp-admin-master/app/www/view/usercenter/betrecord.html
+++ b/tp-admin-master/app/www/view/usercenter/betrecord.html
@@ -20,6 +20,9 @@
 <meta name=x5-page-mode content=app>
 <meta name=msapplication-tap-highlight content=no>
 <link rel="shortcut icon" href=favicon.ico type=image/x-icon>
+{js href="__JS__/jquery.js" /}
+{js href="__JS__/jquery.cookie.js" /}
+{js href="__JS__/betrecord.js" /}
 {css href="__CSS__/login.css" /}
 {js href="__JS__/resize.js" /}
 </head>
