--- a/tp-admin-master/app/www/view/usercenter/billrecord.html
+++ b/tp-admin-master/app/www/view/usercenter/billrecord.html
@@ -20,6 +20,9 @@
 <meta name=x5-page-mode content=app>
 <meta name=msapplication-tap-highlight content=no>
 <link rel="shortcut icon" href=favicon.ico type=image/x-icon>
+{js href="__JS__/jquery.js" /}
+{js href="__JS__/jquery.cookie.js" /}
+{js href="__JS__/billrecord.js" /}
 {css href="__CSS__/login.css" /}
 {js href="__JS__/resize.js" /}
 </head>
@@ -60,20 +63,6 @@
           </div>
         </div>
         <div data-v-1558f0ab="" class="scrollBox"><!----></div>
-      </div>
-    </div>
-    <div data-v-2b5ddb46="" class="_problemBox" data-v-1558f0ab="" style="display: none;">
-      <div data-v-2b5ddb46="" class="blackBg"></div>
-      <div data-v-2b5ddb46="" class="moreLayer">
-        <ul data-v-2b5ddb46="">
-          <li data-v-2b5ddb46="" style="display: none;"><a data-v-2b5ddb46="">选择登录帐号</a></li>
-          <li data-v-2b5ddb46=""><a data-v-2b5ddb46="">今天</a> <span data-v-2b5ddb46="" style="display: none;"></span></li>
-          <li data-v-2b5ddb46=""><a data-v-2b5ddb46="">昨天</a> <span data-v-2b5ddb46="" style="display: none;"></span></li>
-          <li data-v-2b5ddb46=""><a data-v-2b5ddb46="">七天</a> <span data-v-2b5ddb46="" style="display: none;"></span></li>
-        </ul>
-        <ul data-v-2b5ddb46="">
-          <li data-v-2b5ddb46=""><a data-v-2b5ddb46="">取消</a></li>
-        </ul>
       </div>
     </div>
   </div>
