--- a/tp-admin-master/app/www/view/usercenter/rechargeway.html
+++ b/tp-admin-master/app/www/view/usercenter/rechargeway.html
@@ -21,6 +21,8 @@
 <meta name=msapplication-tap-highlight content=no>
 <link rel="shortcut icon" href=favicon.ico type=image/x-icon>
 {css href="__CSS__/login.css" /}
+{js href="__JS__/jquery.js" /}
+{js href="__JS__/jquery.cookie.js" /}
 {js href="__JS__/resize.js" /}
 </head>
 <body>
