--- a/tp-admin-master/app/www/view/usercenter/tixian.html
+++ b/tp-admin-master/app/www/view/usercenter/tixian.html
@@ -21,7 +21,10 @@
 <meta name=msapplication-tap-highlight content=no>
 <link rel="shortcut icon" href=favicon.ico type=image/x-icon>
 {css href="__CSS__/login.css" /}
+{js href="__JS__/jquery.js" /}
+{js href="__JS__/jquery.cookie.js" /}
 {js href="__JS__/resize.js" /}
+{js href="__JS__/tixian.js" /}
 </head>
 <body>
 <div id="app">
