--- a/tp-admin-master/app/www/view/usercenter/personalinfo.html
+++ b/tp-admin-master/app/www/view/usercenter/personalinfo.html
@@ -24,6 +24,7 @@
 {js href="__JS__/jquery.js" /}
 {js href="__JS__/jquery.cookie.js" /}
 {js href="__JS__/resize.js" /}
+{js href="__JS__/info.js" /}
 </head>
 <body>
 <div id="app">
@@ -60,17 +61,17 @@
     </ul>
     <ul data-v-df275b96="">
       <li data-v-df275b96="">
-        <div data-v-df275b96=""><span data-v-df275b96="">手机</span><i data-v-df275b96="" class="iconfont right"></i><em data-v-df275b96="">未绑定</em></div>
+        <div data-v-df275b96=""><span data-v-df275b96="">手机</span><i data-v-df275b96="" class="iconfont right"></i><em data-v-df275b96=""><input data-v-df275b96="" va-para="NickPhone" regmsg="请使用正确的手机号" tag="手机" type="text" placeholder="请设置手机" class="va131" name="NickPhone"></em></div>
       </li>
       <li data-v-df275b96="">
-        <div data-v-df275b96=""><span data-v-df275b96="">邮箱</span><i data-v-df275b96="" class="iconfont right"></i><em data-v-df275b96="">未绑定</em></div>
+        <div data-v-df275b96=""><span data-v-df275b96="">邮箱</span><i data-v-df275b96="" class="iconfont right"></i><em data-v-df275b96=""><input data-v-df275b96="" va-para="NickEmail" regmsg="请使用正确的邮箱" tag="邮箱" type="text" placeholder="请设置邮箱" class="va131" name="NickEmail"></em></div>
       </li>
       <li data-v-df275b96="">
         <div data-v-df275b96=""><span data-v-df275b96="">性别</span><i data-v-df275b96="" class="iconfont right"></i><em data-v-df275b96="">
-          <select data-v-df275b96="" tag="性别" va-para="Sex" class="va131" name="Sex">
-            <option data-v-df275b96="" value="2">保密</option>
-            <option data-v-df275b96="" value="1">男</option>
-            <option data-v-df275b96="" value="0">女</option>
+          <select data-v-df275b96="" tag="性别" va-para="Sex" class="va131" name="Sex" id='sex'>
+            <option data-v-df275b96="" value="保密">保密</option>
+            <option data-v-df275b96="" value="男">男</option>
+            <option data-v-df275b96="" value="女">女</option>
           </select>
           </em></div>
       </li>
