修改验证码位数和充值页面逻辑

--- a/tp-admin-master/app/www/view/usercenter/wechat.html
+++ b/tp-admin-master/app/www/view/usercenter/wechat.html
@@ -54,6 +54,7 @@ alert("已复制好，可贴粘。");
   <div data-v-06ff19ac="" s="[object Object]" class=""><!---->
     <div data-v-06ff19ac="" class="main">
       <input data-v-06ff19ac="" name="GetMoneyUser" type="hidden" value="" readonly>
+       <input  type="hidden"  name="playtype" id="playtype"  value="wechat">
       <table data-v-06ff19ac="">
         <tr data-v-06ff19ac="">
           <td data-v-06ff19ac="">充值金额</td>
