--- a/tp-admin-master/app/www/view/usercenter/weixin.html
+++ b/tp-admin-master/app/www/view/usercenter/weixin.html
@@ -21,11 +21,7 @@
 <meta name=msapplication-tap-highlight content=no>
 <link rel="shortcut icon" href=favicon.ico type=image/x-icon>
 <link href=css/login.css rel=stylesheet>
-{css href="__CSS__/login.css" /}
-{js href="__JS__/jquery.js" /}
-{js href="__JS__/jquery.cookie.js" /}
-{js href="__JS__/resize.js" /}
-{js href="__JS__/alipay.js" /}
+<script src="js/resize.js"></script>
 <script type="text/javascript">
 function copyUrl2(thisId)
 {
@@ -40,9 +36,9 @@ alert("已复制好，可贴粘。");
 <body>
 <div id="app">
   <div id="shadow" style="display: none;"></div>
-  <header class="top"><span>支付宝</span> <!---->
+  <header class="top"><span>微信支付</span> <!---->
     <div class="iconfont back" style="display: none;"></div>
-    <a href="javascript :;" onClick="javascript :history.back(-1)" class="iconfont back" style=""></a></header>
+    <a href="/rechargeWay" class="iconfont back" style=""></a> <a href="/service" class="right" style="display: none;">客服</a></header>
   <nav class="bottom" style="display: none;"><a href="/index" class=""><i class="iconfont"></i>
     <p>购彩大厅</p>
     </a> <a href="/activity" class=""><i class="iconfont"></i>
@@ -52,43 +48,33 @@ alert("已复制好，可贴粘。");
     </a> <a href="/userCenter" class=""><i class="iconfont"></i>
     <p>我的账户</p>
     </a></nav>
-  <div data-v-06ff19ac="" s="[object Object]" class=""><!----> <!----> <!----> <!---->
+  <div data-v-06ff19ac="" s="[object Object]" class=""><!---->
     <div data-v-06ff19ac="" class="main">
+      <input data-v-06ff19ac="" name="GetMoneyUser" type="hidden" value="" readonly>
       <table data-v-06ff19ac="">
         <tr data-v-06ff19ac="">
-          <td data-v-06ff19ac="">支付宝姓名</td>
-          <td data-v-06ff19ac=""><input data-v-06ff19ac="" type="text" readonly class="cGold" value="王志宾">
-              <input  type="hidden"  name="playtype" id="playtype"  value="alipaly">
-            <i data-v-06ff19ac="" class="iconfont copy">复制</i></td>
-        </tr>
-        <tr data-v-06ff19ac="">
-          <td data-v-06ff19ac="">支付宝账号</td>
-          <td data-v-06ff19ac=""><input data-v-06ff19ac="" type="text" readonly class="cGold" value="kris816">
-            <i data-v-06ff19ac="" class="iconfont copy">复制</i></td>
-        </tr>
-        <tr data-v-06ff19ac="">
           <td data-v-06ff19ac="">充值金额</td>
-          <td data-v-06ff19ac=""><input data-v-06ff19ac="" type="tel" tag="充值金额" placeholder="请输入充值金额" class="va81" name="Money"></td>
+          <td data-v-06ff19ac=""><input data-v-06ff19ac="" type="tel" tag="充值金额" placeholder="请输入充值金额" class="va78" name="Money"></td>
         </tr>
         <tr data-v-06ff19ac="">
-          <td data-v-06ff19ac="">支付宝姓名</td>
-          <td data-v-06ff19ac=""><input data-v-06ff19ac="" type="text" tag="支付宝姓名" placeholder="请输入您的支付宝姓名" class="va81" name="PayUser"></td>
+          <td data-v-06ff19ac="">微信昵称</td>
+          <td data-v-06ff19ac=""><input data-v-06ff19ac="" type="text" tag="微信昵称" placeholder="请输入您的微信昵称" class="va78" name="PayUser"></td>
         </tr>
         <tr data-v-06ff19ac="">
           <td data-v-06ff19ac="">扫码支付</td>
-          <td data-v-06ff19ac=""><img data-v-06ff19ac="" alt="" class="barcode" src="http://imagess-google.com/yfcp/UploadImages/20171125053936421438.png"></td>
+          <td data-v-06ff19ac=""><img data-v-06ff19ac="" alt="二维码" class="barcode" src="http://imagess-google.com/yfcp/UploadImages/20171116015613909799.png"></td>
         </tr>
         <tr data-v-06ff19ac=""></tr>
       </table>
       <div data-v-06ff19ac="" class="loginBtn BTN"><a data-v-06ff19ac="">确定</a></div>
-      <div data-v-06ff19ac="" class="tips"> 1、请转账到以上支付宝或扫码支付。<br data-v-06ff19ac="">
-        2、若提供的是银行账号，请使用支付宝转账到银行卡的方式进行转账。<br data-v-06ff19ac="">
-        3、请正确填写您的姓名和充值金额。<br data-v-06ff19ac="">
-        4、设置了支付宝昵称的请直接填写昵称。<br data-v-06ff19ac="">
-        5、转账1笔提交1次，请勿重复提交订单。<br data-v-06ff19ac="">
-        6、请务必转账后再提交订单,否则无法及时查到您的款项！ </div>
+      <div data-v-06ff19ac="" class="tips"> 1、扫一扫以上二维码进行充值。<br data-v-06ff19ac="">
+        2、请正确填写您的昵称和充值金额。<br data-v-06ff19ac="">
+        3、微信昵称并非微信账号，请注意区分。<br data-v-06ff19ac="">
+        4、转账时，请在留言中备注自己的游戏账号，便于及时确认充值金额。<br data-v-06ff19ac="">
+        5、可以使用其他手机扫二维码进行充值，也可以将二维码保存到相册再使用微信识别相册中的二维码进行充值，由于本二维码经常更换，充值前务必重新保存最新的二维码。<br data-v-06ff19ac="">
+        6、请务必转账后再提交订单，否则无法及时查到您的款项！ </div>
     </div>
-    <!----></div>
-  <!----></div>
+  </div>
+</div>
 </body>
 </html>
