--- a/tp-admin-master/app/www/view/usercenter/billrecord.html
+++ b/tp-admin-master/app/www/view/usercenter/billrecord.html
@@ -53,16 +53,102 @@
         </ul>
       </div>
       <div data-v-1558f0ab="" class="bd dontSelect">
-        <div data-v-1558f0ab="" class="scrollBox"><!----></div>
-        <div data-v-1558f0ab="" class="scrollBox">
-          <div data-v-1558f0ab="" class="touchScroll">
+        <!-- 所有类型 -->
+        <div data-v-1558f0ab="" class="scrollBox">          
+            <ul>
+               <li>2017/11/28日</li>
+               <li>充值500</li>
+               <li>成功</li>
+            </ul>
+            <ul>
+               <li>2017/11/28日</li>
+               <li>提现500</li>
+               <li>失败</li>
+            </ul>
+            <ul>
+               <li>2017/11/28日</li>
+               <li>充值500</li>
+               <li>成功</li>
+            </ul>
+            <ul>
+               <li>2017/11/28日</li>
+               <li>提现500</li>
+               <li>成功</li>
+            </ul>
+          <!-- 暂无记录 -->
+          <div data-v-1558f0ab="" class="touchScroll" style='display: none;'>
             <div data-v-1558f0ab="" class="fullPageMsg">
               <div data-v-1558f0ab="" class="fullPageIcon iconfont"></div>
               <p data-v-1558f0ab="">暂无记录</p>
             </div>
           </div>
+          <!-- 暂无记录 -->
         </div>
-        <div data-v-1558f0ab="" class="scrollBox"><!----></div>
+        <!-- 所有类型 -->
+        <!-- 提现记录 -->
+        <div data-v-1558f0ab="" class="scrollBox ds">
+            <ul>
+               <li>2017/11/28日</li>
+               <li>500</li>
+               <li>成功</li>
+            </ul>
+            <ul>
+               <li>2017/11/28日</li>
+               <li>500</li>
+               <li>失败</li>
+            </ul>
+            <ul>
+               <li>2017/11/28日</li>
+               <li>500</li>
+               <li>成功</li>
+            </ul>
+            <ul>
+               <li>2017/11/28日</li>
+               <li>500</li>
+               <li>成功</li>
+            </ul>
+            <!-- 暂无记录 -->
+            <div data-v-1558f0ab="" class="touchScroll" style='display: none;'>
+              <div data-v-1558f0ab="" class="fullPageMsg">
+                <div data-v-1558f0ab="" class="fullPageIcon iconfont"></div>
+                <p data-v-1558f0ab="">暂无记录</p>
+              </div>
+            </div>
+            <!-- 暂无记录 -->
+        </div>
+        <!-- 提现记录 -->
+        <!-- 充值记录 -->
+        <div data-v-1558f0ab="" class="scrollBox">
+            <ul>
+               <li>2017/11/28日</li>
+               <li>600</li>
+               <li>成功</li>
+            </ul>
+            <ul>
+               <li>2017/11/28日</li>
+               <li>600</li>
+               <li>失败</li>
+            </ul>
+            <ul>
+               <li>2017/11/28日</li>
+               <li>600</li>
+               <li>成功</li>
+            </ul>
+            <ul>
+               <li>2017/11/28日</li>
+               <li>600</li>
+               <li>成功</li>
+            </ul>
+            <!-- 暂无记录 -->
+            <div data-v-1558f0ab="" class="touchScroll" style='display: none;'>
+              <div data-v-1558f0ab="" class="fullPageMsg">
+                <div data-v-1558f0ab="" class="fullPageIcon iconfont"></div>
+                <p data-v-1558f0ab="">暂无记录</p>
+              </div>
+            </div>
+            <!-- 暂无记录 -->
+        </div>
+        <!-- 充值记录 -->
       </div>
     </div>
   </div>
