--- a/tp-admin-master/app/www/view/usercenter/betrecord.html
+++ b/tp-admin-master/app/www/view/usercenter/betrecord.html
@@ -52,17 +52,25 @@
         </ul>
       </div>
       <div data-v-1558f0ab="" class="bd dontSelect">
-        <div data-v-1558f0ab="" class="scrollBox">
-          <div data-v-1558f0ab="" class="touchScroll">
+        <div data-v-1558f0ab="" class="scrollBox1">
+          <ul>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+          </ul>
+          <!-- 暂无记录 -->
+          <div data-v-1558f0ab="" class="touchScroll" style='display:none;'>
             <div data-v-1558f0ab="" class="fullPageMsg">
               <div data-v-1558f0ab="" class="fullPageIcon iconfont"></div>
               <p data-v-1558f0ab="">暂无记录</p>
             </div>
           </div>
+          <!-- 暂无记录 -->
         </div>
-        <div data-v-1558f0ab="" class="scrollBox"><!----></div>
-        <div data-v-1558f0ab="" class="scrollBox"><!----></div>
-        <div data-v-1558f0ab="" class="scrollBox"><!----></div>
+        <div data-v-1558f0ab="" class="scrollBox1"><!----></div>
+        <div data-v-1558f0ab="" class="scrollBox1"><!----></div>
+        <div data-v-1558f0ab="" class="scrollBox1"><!----></div>
       </div>
     </div>
     <div data-v-2b5ddb46="" class="_problemBox" data-v-1558f0ab="" style="display: none;">
